Archive2/0f/f2f89c7d12c94d/output
main.cpp:9:44: error: nested name specifier 'A<T *, W *>::' for declaration does not refer into a class, class template or class template partial specialization
template<class T, class W> void A<T*, W*>::foo(){ std::cout << "foo" << std::endl; }
                                ~~~~~~~~~~~^
1 error generated.
